<resources>
    <string name="app_name">i_tefteri</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sing_in">Sing In</string>
    <string name="title_activity_sing_in_activity">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_account">Εγγραφή στην υπηρεσία i-tefteri επιλογή λογαριασμού</string>

    <string name="title1_main_button">Πληρωμές</string>
    <string name="title2_main_button">Εισπράξεις</string>
    <string name="title3_main_button">Μελλοντική Κίνηση</string>
    <string name="title4_main_button">Αναφορές</string>
    <string name="title5_main_button">i-start app</string>
    <string name="title_activity_register_phone">RegisterPhoneActivity</string>

    <string name="prompt_mobile_num">Αριθμός Τηλεφώνου</string>
    <string name="prompt_btn_mobile_num">Καταχώρηση και Συνέχεια</string>
    <string name="title_activity_payments">PaymentsActivity</string>

    <string name="title_new_payment1">νέα πληρωμή</string>
    <string name="title_new_payment2">λίστα εκκρεμοτήτων</string>
    <string name="title_new_payment3">εγκεκριμένες πληρωμές ανά άτομο</string>
    <string name="title_new_payment4">εγκεκριμένες πληρωμές ανά ημερομηνία</string>
    <string name="title_new_payment5">ημερολόγιο πληρωμών</string>
    <string name="title_activity_new_payment_select_person">newPaymentSelectPersonActivity</string>
    <string name="title_activity_actoual_payment">ActoualPaymentActivity</string>


    <string name="title_new_Collect1">νέα είσπραξη</string>
    <string name="title_new_Collect2">λίστα εκκρεμοτήτων</string>
    <string name="title_new_Collect3">εγκεκριμένες εισπράξεις ανά άτομο</string>
    <string name="title_new_Collect4">εγκεκριμένες εισπράξεις ανά ημερομηνία</string>
    <string name="title_new_Collect5">ημερολόγιο εισπράξεων</string>

    <string-array name="periodikotita">
        <item>μια φορά</item>
        <item>κάθε μήνα</item>
        <item>κάθε δυο μήνες</item>
        <item>κάθε τρεις μήνες</item>
        <item>κάθε τέσσερις μήνες</item>
        <item>κάθε εξάμηνο</item>
        <item>κάθε έτος</item>
    </string-array>
    <string name="title_activity_collect_menu">εισπράξεις</string>
    <string name="title_activity_actual_collection">καταχώρηση είσπραξης</string>
    <string name="title_activity_payments_pendings">επιλογή εκκρεμότητας</string>


</resources>
