<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.java.main.i_tefteri.CollectMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_collect_menu" />

    <Button
        android:id="@+id/BtnNewCollect1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/title_new_Collect1"
        android:textAllCaps="false"
        android:background="@color/button2Color"/>

    <Button
        android:id="@+id/BtnNewCollect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/title_new_Collect2"
        android:textAllCaps="false"
        android:background="@color/button2Color"/>

    <Button
        android:id="@+id/BtnNewCollect3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:text="@string/title_new_Collect3"
        android:textAllCaps="false"
        android:background="@color/button2Color"/>

    <Button
        android:id="@+id/BtnNewCollect4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/title_new_Collect4"
        android:textAllCaps="false"
        android:background="@color/button2Color"/>

    <Button
        android:id="@+id/BtnNewCollect5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:text="@string/title_new_Collect5"
        android:textAllCaps="false"
        android:background="@color/button2Color"/>

</android.support.design.widget.CoordinatorLayout>
